--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -1,4 +1,3 @@
-
 /* Register.css */
 .register-container {
   display: flex;
@@ -44,20 +43,21 @@
 }
 
 .register-form input {
-  padding: 0.9rem;
-  border: transparent;
+  padding: 1.2rem 2rem;
+  border: none;
   background: transparent;
   background-image: url(../Assets/css/img/namep.png);
-  background-size: cover;
-  background-position: center;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
+  background-position: center;
   font-size: 1.2rem;
   width: 100%;
-  max-width: 45vh;
-  height: 6vh;
+  height: 70px;
   font-weight: 200;
   color: #ffffff;
   transition: 0.2s ease;
+  outline: none;
+  font-family: 'Glitch', sans-serif;
 }
 
 .register-form input:focus {
